Minor tweaks to Pandas, iPython, Numpy and SVMs

--- a/datascience/Pandas - Series and Dataframes.ipynb
+++ b/datascience/Pandas - Series and Dataframes.ipynb
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -352,6 +352,61 @@
     "import pandas as pd\n",
     "customers_df = pd.DataFrame(customers)\n",
     "print customers_df # As you'll notice, pandas does pretty printing!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>customer_nr</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>43</td>\n",
+       "      <td>12345</td>\n",
+       "      <td>Smith</td>\n",
+       "      <td>John</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>56</td>\n",
+       "      <td>99999</td>\n",
+       "      <td>Ford</td>\n",
+       "      <td>John</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age  customer_nr last_name  name\n",
+       "0   43        12345     Smith  John\n",
+       "3   56        99999      Ford  John"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "# customers_df.select(lambda x: x.name == \"John\")\n",
+    "customers_df[customers_df['name'] == \"John\"]"
    ]
   },
   {
