Simple CUDA example
Also: minor typos fixes in existing content.

--- a/machine-learning/Overview.ipynb
+++ b/machine-learning/Overview.ipynb
@@ -85,6 +85,8 @@
    "source": [
     "#  Neural Networks #\n",
     "\n",
+    "Very good general overview: https://www.youtube.com/watch?v=aircAruvnKk\n",
+    "\n",
     "Neural network example, with input, output and hidden layers:\n",
     "\n",
     "![Neutral Network](nn/neural_net.png)\n",
@@ -102,8 +104,8 @@
     "\n",
     "There are multiple types of activation functions. Some popular ones:\n",
     " - [Sigmoid function](https://en.wikipedia.org/wiki/Sigmoid_function), ```σ(x)σ(x)```: squashes numbers into the range (0, 1)\n",
-    " - The [hyperbolic tangent](https://en.wikipedia.org/wiki/Hyperbolic_function#Standard_analytic_expressions): ```tanh(x)```, which squashes numbers into the range (-1, 1)\n",
-    " - The [rectified linear unit](https://en.wikipedia.org/wiki/Rectifier_(neural_networks)), ```ReLU(x)=max(0,x)```.\n"
+    " - The [rectified linear unit](https://en.wikipedia.org/wiki/Rectifier_(neural_networks)), ```ReLU(x)=max(0,x)```. This is quickly becoming one of the more popular activation functions, especially in Deep Learning, as it turns out that it's performance is better than the sigmoid function (and the function is simpler).\n",
+    " - The [hyperbolic tangent](https://en.wikipedia.org/wiki/Hyperbolic_function#Standard_analytic_expressions): ```tanh(x)```, which squashes numbers into the range (-1, 1)"
    ]
   },
   {
