Playing around with keras: WIP :)

--- a/machine-learning/Overview.ipynb
+++ b/machine-learning/Overview.ipynb
@@ -110,9 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### Types ####\n",
     "There are different neural network types:\n",
@@ -132,9 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Recurrent Neural Networks ##\n",
     "\n",
@@ -182,9 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Long short-term memory Networks (LTSM) ##\n",
     "\n",
@@ -219,9 +213,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "source": [
+    "## Pooling\n",
+    "(Joris: Pooling layers seem to be specific to CNNs.)\n",
+    "\n",
+    "Pooling layers group/pool inputs together into a smaller layer. This reduces the computational cost by reducing the number of parameters to learn, while often still providing good results. For example, often times, not all input numbers are needed to detect a feature.\n",
+    "\n",
+    "For example, in max pooling, we just take the highest (=max) number of each window we're considering. In the example below, the filter size = 2 (because the window=2x2), and the stride = 2, because we jump to steps to the right/bottom after applying the filter (i.e. there is no overlap between consecutive filter applications, which would be the case if stride was e.g. equal to 1).\n",
+    "\n",
+    "![Max Pooling](nn/max-pooling.webp)\n",
+    "\n",
+    "Average Pooling is sometimes also used (averaging the numbers in the window), but this isn't often used.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Unsupervised Learning\n",
     "\n",
@@ -281,9 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Ensemble Learning\n",
     "\n",
