End-to-end simple neural network with Keras

--- a/machine-learning/Overview.ipynb
+++ b/machine-learning/Overview.ipynb
@@ -104,6 +104,7 @@
     "\n",
     "There are multiple types of activation functions. Some popular ones:\n",
     " - [Sigmoid function](https://en.wikipedia.org/wiki/Sigmoid_function), ```σ(x)σ(x)```: squashes numbers into the range (0, 1)\n",
+    " - [Softmax](https://en.wikipedia.org/wiki/Softmax_function): Generalization of the sigmoid function of k-dimensional vectors, returning a vector of dimension k with real values in range of (0,1) that add up to 1. Can for example be used to represent the probability that a given input belongs to one of k output classes.\n",
     " - The [rectified linear unit](https://en.wikipedia.org/wiki/Rectifier_(neural_networks)), ```ReLU(x)=max(0,x)```. This is quickly becoming one of the more popular activation functions, especially in Deep Learning, as it turns out that it's performance is better than the sigmoid function (and the function is simpler).\n",
     " - The [hyperbolic tangent](https://en.wikipedia.org/wiki/Hyperbolic_function#Standard_analytic_expressions): ```tanh(x)```, which squashes numbers into the range (-1, 1)"
    ]
@@ -125,6 +126,8 @@
     "**Deep Neural Networks**: neural networks that contain more than one hidden layer. \n",
     "\n",
     "**Recurrent Neural Network (RNN)**: also propagate data from later processing stages to earlier stages.\n",
+    "\n",
+    "**Markov Chain**: You can go from any state to any other state. Probability to go from one state to another represented by a matrix.\n",
     "    "
    ]
   },
@@ -324,7 +327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
