--- a/machine-learning/keras/simple.ipynb
+++ b/machine-learning/keras/simple.ipynb
@@ -10,7 +10,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Imports\n",
@@ -358,7 +360,7 @@
     "# Build model with 2 inputs and 3 outputs\n",
     "# Use the softmax activation function to make sure our output vector has values between 0 and 1 \n",
     "# (= probabilities of belonging to the respective class)\n",
-    "# Without the softmax function\n",
+    "# Without the softmax function, the outputs wouldn't be squeezed between 0 and 1. \n",
     "a = Input(shape=(2,))\n",
     "b = Dense(3, activation='softmax')(a)\n",
     "model = Model(inputs=a, outputs=b)\n",
@@ -566,6 +568,7 @@
    "source": [
     "# Generate a dataset to evaluate our model\n",
     "evaluation_dataset = generate_data()\n",
+    "# Concat, shuffle (same as before, but with new dataset)\n",
     "evaluation_dataset = pandas.concat([evaluation_dataset[0], evaluation_dataset[1] , evaluation_dataset[2]], ignore_index=True) # concat dataset\n",
     "input_data = input_data.sample(frac=1).reset_index(drop=True) # Shuffle dataset\n",
     "input_data.head()"
@@ -574,9 +577,12 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "# Determine input, output for model\n",
     "evaluation_input = evaluation_dataset[[\"x\", \"y\"]].values\n",
     "evaluation_output = keras.utils.to_categorical(evaluation_dataset[\"target\"].values)"
    ]
@@ -601,27 +607,6 @@
     "print model.metrics_names[0], \"=\", loss_and_metrics[0]\n",
     "print model.metrics_names[1], \"=\", loss_and_metrics[1]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
