Various updates, mostly NN and tensorflow

--- a/machine-learning/Overview.ipynb
+++ b/machine-learning/Overview.ipynb
@@ -23,7 +23,9 @@
     "\n",
     "Source: https://www.mathworks.com/discovery/machine-learning.html\n",
     "\n",
-    "![Machine Learning hierarchy](images/machine_learning.svg)\n"
+    "![Machine Learning hierarchy](images/machine_learning.svg)\n",
+    "\n",
+    "Note: In many similar hierarchy diagrams, **reinforcement learning** is another category that exists next to **supervised** and **unsupervised** learning."
    ]
   },
   {
@@ -90,12 +92,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Decision Trees #\n",
+    "### Decision Trees #\n",
     "\n",
     "Scikit-Learn uses the CART algorithm, which produces only binary trees: nonleaf nodes always have two children (i.e., questions only have yes/no answers). There are other algorithms that use produce 3 or more leafs per parent.\n",
     "\n",
     "From [Hands-On Machine Learning with Scikit-Learn and TensorFlow, Chapter 6](http://shop.oreilly.com/product/0636920052289.do):\n",
     "The idea behind the CART algorithm is quite simple: the algorithm first splits the training set in two subsets using a single feature k and a threshold tk (e.g., \"petal length <= 2.45 cm\"). How does it choose $k$ and $t_k$? It searches for the pair $(k, tk)$ that produces the purest subsets (weighted by their size). Purity is defined by the [Gini measure](https://en.wikipedia.org/wiki/Gini_coefficient). Once it has successfully split the training set in two, it splits the subsets using the same logic, then the sub-subsets and so on, recursively. It stops recursing once it reaches the maximum depth (defined by the max_depth hyperparameter), or if it cannot find a split that will reduce impurity. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Regression\n",
+    "\n",
+    "The goal of regression is to predict numbers (=continuous), note that this is different from classification where we predict class membership.\n",
+    "\n",
+    "One exception is logistic regression where we use a regression technique to do classification."
    ]
   },
   {
@@ -121,7 +134,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## k-means\n",
+    "## Clustering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### k-means\n",
     "\n",
     "Most of this is from [wikipedia](https://en.wikipedia.org/wiki/K-means_clustering).\n",
     "\n",
@@ -133,7 +153,7 @@
     "\n",
     "where $μ_i$ is the mean of points in $S_i$. \n",
     "\n",
-    "### algorithms\n",
+    "#### algorithms\n",
     "The problem is computationally difficult (NP-hard); however, there are efficient heuristic algorithms that are commonly employed and converge quickly to a local optimum. So these algorithms don't typically find the best (=optimal) global clustering."
    ]
   },
@@ -180,7 +200,47 @@
     "Transfer learning focuses on storing knowledge gained while solving one problem and applying it to a different but related problem. For example, knowledge gained while learning to recognize cars could apply when trying to recognize trucks.\n",
     "\n",
     "Practically, you can for example take a model from [TensorFlow Hub](https://www.tensorflow.org/hub/) and then apply it to your own problem.\n",
-    "\n"
+    "\n",
+    "Source: https://medium.com/owkin/transfer-learning-and-the-rise-of-collaborative-artificial-intelligence-41f9e2950657\n",
+    "\n",
+    "![Transfer Learning](nn/transfer-learning.png)\n",
+    "\n",
+    "## Model Sources\n",
+    "\n",
+    "- https://www.tensorflow.org/hub/\n",
+    "- https://github.com/tensorflow/tensor2tensor\n",
+    "- http://caffe.berkeleyvision.org/model_zoo.html\n",
+    "- https://modelzoo.co/\n",
+    "- (Service) https://algorithmia.com/algorithms\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Hyperparameters\n",
+    "\n",
+    "A hyperparameter is a parameter whose value is set before the learning process begins. By contrast, the values of other parameters are derived via training.\n",
+    "\n",
+    "For example, one optimization algorithm that is often used in ML is Stochastic Gradient Descent (SGD). That algorithm takes an input parameter (the `learning_rate` which can be more or less interpreted as \"aggressiveness\") which is set once at the start, and then kept consistent throughout the learning phase.\n",
+    "\n",
+    "In tensorflow:\n",
+    "\n",
+    "```python\n",
+    "# loss = function to optimiize\n",
+    "optimizer = tf.train.GradientDescentOptimizer(learning_rate=0.05) # learning_rate is a hyperparameter\n",
+    "train = optimizer.minimize(loss)\n",
+    "sess.run(train)\n",
+    "# value of `train` is the weights (W) and bias (b) of the nodes in the neural network\n",
+    "```\n",
+    "\n",
+    "This is a simple example with just a single hyperparamter, but real-world deep networks often times have many hyperparameters (often dozens or more). The art of finding the right values for those hyperparameters is referred to as *hyperparameter search* and is one of the trickier parts of ML. \n",
+    "\n",
+    "This is especially true because doing an automated hyperparameter search is often intractable. That is, usually the amount of learning time required to train a model with a single set of hyperparameter values is already high. Repeating that computation for all possible hyperparameter combinations is just not feasible, especially when some of the hyperparameters can have continuous values.\n",
+    "\n",
+    "However, there are some tools in this area, like [Katib](https://github.com/kubeflow/katib)\n"
    ]
   },
   {
