--- a/machine-learning/keras/misc.ipynb
+++ b/machine-learning/keras/misc.ipynb
@@ -23,27 +23,20 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "From https://www.tensorflow.org/api_docs/python/tf/Tensor\n",
-    "\n",
-    "A Tensor Represents one of the outputs of an Operation.\n",
-    "\n",
-    "A Tensor is a symbolic handle to one of the outputs of an Operation. It does not hold the values of that operation's output, but instead provides a means of computing those values in a TensorFlow tf.Session."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
